--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,25 +2,30 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Shuting Zhao
     - name: Date of Birth
-      value: 14th March 1879
+      value: 06th August 2001
     - name: Languages
-      value: English, German
+      value: English, Chinese
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: M.S. in Electrical and Computer Engineering
+      institution: University of California San Diego
+      year: 2024 - 2026
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - Major in Computer Science
+        - Minor in Electrical Engineering
+        - GPA: 3.8/4.0
+        - title: Relevant Courses
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
+            - Computer Architecture
+            - Operating Systems
+            - Computer Networks
+            - Database Systems
+            - Artificial Intelligence
+            - Machine Learning
     - title: Federal teaching diploma
       institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
       year: 1900
